--- a/.github/workflows/mdToPages.yaml
+++ b/.github/workflows/mdToPages.yaml
@@ -30,18 +30,22 @@ jobs:
       # Add Marp-specific metadata to the Markdown file before translation
       - name: Insert Marp Style Block
         run: |
-          cat <<EOF > README.md
-          ---
-          marp: true
-          style: |
-            section {
-              background-image: url('img/ddx_logo.png');
-              background-size: 20%;
-              background-repeat: no-repeat;
-              background-position: 95% 30px;
-            }
-          ---
-          $(cat README.md)  # Append original content after the Marp front matter
+          echo "---" > temp_README.md
+          echo "marp: true" >> temp_README.md
+          echo "style: |" >> temp_README.md
+          echo "  section {" >> temp_README.md
+          echo "    background-image: url('img/ddx_logo.png');" >> temp_README.md
+          echo "    background-size: 20%;" >> temp_README.md
+          echo "    background-repeat: no-repeat;" >> temp_README.md
+          echo "    background-position: 95% 30px;" >> temp_README.md
+          echo "  }" >> temp_README.md
+          echo "---" >> temp_README.md
+
+          # Append the original README.md content after the Marp front matter
+          cat README.md >> temp_README.md
+
+          # Replace the original README.md with the modified one
+          mv temp_README.md README.md
         shell: bash
 
       - name: Marp Build (README)
