--- a/.github/workflows/mdToPages.yaml
+++ b/.github/workflows/mdToPages.yaml
@@ -29,7 +29,7 @@ jobs:
 
       # Add Marp-specific metadata to the Markdown file before translation
       - name: Insert Marp Style Block
-        run: ./prepend-marp.sh
+        run: ./addStyle.sh
         shell: bash
 
       - name: Marp Build (README)
