[Update]: Added language settings

--- a/.github/workflows/mdToPages.yaml
+++ b/.github/workflows/mdToPages.yaml
@@ -26,20 +26,37 @@ jobs:
           export LANGUAGE=en_US:en
           export LC_ALL=en_US.UTF-8
 
+          file -i marp_README.md
+          head marp_README.md
+
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Ensure build dir exists
-        run: mkdir -p build
+        run: |
+          mkdir -p build
+
+          file -i marp_README.md
+          head marp_README.md
 
       - name: Copy images directory (if exists)
-        run: if [[ -d img ]]; then cp -R img build/img; fi
+        run: | 
+          if [[ -d img ]]; then cp -R img build/img; fi
+
+          file -i marp_README.md
+          head marp_README.md
 
       # Add Marp-specific metadata to the Markdown file before translation
       - name: Insert Marp Style Block
         run: |
+          file -i marp_README.md
+          head marp_README.md
+
           export LC_ALL=en_US.UTF-8
           export LANG=en_US.UTF-8
+
+          file -i marp_README.md
+          head marp_README.md
 
           echo "---" > marp_README.md
           echo "marp: true" >> marp_README.md
